5.5 image alignment fix

--- a/sass/editor_style.scss
+++ b/sass/editor_style.scss
@@ -149,7 +149,7 @@ th {
 /* Images */
 
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
 }
 .alignleft {
   float: left;
