--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -172,7 +172,7 @@ th {
 
 /* Images */
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
 }
 
 .alignleft {
